# pi-dashboard

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  dev.sh  install.sh  package.sh  pyproject.toml  setup.py
ansible/: configure.yml  deploy.yml  inventory.yml  system-config.yml  update.yml
config/: config.example.json  default.json
scripts/: boot-optimization.sh  pi-dashboard-shutdown  power-management.sh  readonly-fs.sh
src/pi_dashboard/: __init__.py  main.py
src/pi_dashboard/camera/: __init__.py  camera.py
src/pi_dashboard/media/: __init__.py  player.py
src/pi_dashboard/modules/: __init__.py
src/pi_dashboard/system/: __init__.py
src/pi_dashboard/templates/: camera.html  index.html  media.html  settings.html  system.html
systemd/: pi-dashboard-shutdown.service  pi-dashboard.service
